--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="https://metapyziks.github.io/BotMimicReplayViewer/js/facepunch.webgame.js?v=196d-131a6"></script>
-        <script src="https://metapyziks.github.io/BotMimicReplayViewer/js/sourceutils.js?v=196d-131a6"></script>
-        <link type="text/css" rel="stylesheet" href="https://metapyziks.github.io/BotMimicReplayViewer/styles.css?v=196d-131a6" />
+        <script src="js/facepunch.webgame.js?v=196d-131a6"></script>
+        <script src="js/sourceutils.js?v=196d-131a6"></script>
+        <script src="js/replayviewer.js?v=196d-131a6"></script>
+        <link type="text/css" rel="stylesheet" href="styles.css?v=196d-131a6" />
     </head>
     <body>
-    <h2>Source Map Viewer Demo - kz_reach_v2</h2>
+    <h2>BotMimic Replay Viewer Demo - kz_reach_v2</h2>
     <div id="map-view">
         <script>
             var viewer;
             window.onload = function() {
-                viewer = new SourceUtils.MapViewer($("#map-view")[0]);
+                viewer = new ReplayViewer($("#map-view")[0]);
                 viewer.loadMap("https://metapyziks.github.io/BotMimicReplayViewer/maps/kz_reach_v2/index.json?v=196d-131a6");
                 viewer.animate();
             }
