--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/js/facepunch.webgame.js?v=303286a"></script>
-        <script src="/js/sourceutils.js?v=303286a"></script>
-        <script src="/js/replayviewer.js?v=303286a"></script>
-        <link type="text/css" rel="stylesheet" href="/styles.css?v=303286a" />
+        <script src="https://metapyziks.github.io/BotMimicReplayViewer/js/facepunch.webgame.js?v=303286a"></script>
+        <script src="https://metapyziks.github.io/BotMimicReplayViewer/js/sourceutils.js?v=303286a"></script>
+        <script src="https://metapyziks.github.io/BotMimicReplayViewer/js/replayviewer.js?v=303286a"></script>
+        <link type="text/css" rel="stylesheet" href="https://metapyziks.github.io/BotMimicReplayViewer/styles.css?v=303286a" />
     </head>
     <body>
     <h2>BotMimic Replay Viewer Demo - kz_reach_v2</h2>
@@ -19,8 +19,8 @@
             var viewer;
             window.onload = function() {
                 viewer = new ReplayViewer($("#map-view")[0]);
-                viewer.loadMap("/maps/kz_reach_v2/index.json?v=303286a");
-                viewer.loadReplay("/replays/kz_reach_v2/0_SKZ_NRM_PRO.replay");
+                viewer.loadMap("https://metapyziks.github.io/BotMimicReplayViewer/maps/kz_reach_v2/index.json?v=303286a");
+                viewer.loadReplay("https://metapyziks.github.io/BotMimicReplayViewer/replays/kz_reach_v2/0_SKZ_NRM_PRO.replay");
                 viewer.animate();
             }
         </script>
