--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link type="text/css" rel="stylesheet" href="https://metapyziks.github.io/BotMimicReplayViewer/styles.css?v=303286a" />
     </head>
     <body>
-    <h2>BotMimic Replay Viewer Demo - kz_reach_v2</h2>
+    <h2>GOKZ Replay Viewer Demo - kz_reach_v2</h2>
     <div id="map-view">
         <script>
             var viewer;
