--- a/maps/kz_reach_v2/index.html
+++ b/maps/kz_reach_v2/index.html
@@ -7,9 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="https://metapyziks.github.io/GOKZReplayViewer/js/facepunch.webgame.js?v=196e-1086"></script>
-        <script src="https://metapyziks.github.io/GOKZReplayViewer/js/sourceutils.js?v=196e-1086"></script>
-        <link type="text/css" rel="stylesheet" href="https://metapyziks.github.io/GOKZReplayViewer/styles.css?v=196e-1086" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=196e-8673"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=196e-8673"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=196e-8673" />
     </head>
     <body>
     <h2>Source Map Viewer Demo - kz_reach_v2</h2>
@@ -18,7 +18,7 @@
             var viewer;
             window.onload = function() {
                 viewer = new SourceUtils.MapViewer($("#map-view")[0]);
-                viewer.loadMap("https://metapyziks.github.io/GOKZReplayViewer/maps/kz_reach_v2/index.json?v=196e-1086");
+                viewer.loadMap("/GOKZReplayViewer/maps/kz_reach_v2/index.json?v=196e-8673");
                 viewer.animate();
             }
         </script>
