Fixed index title

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8" />
-        <title>GOKZ Replay Viewer Demo - ${MAPNAME} - ${REPLAYNAME}</title>
+        <title>GOKZ Replay Viewer Demo</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=5e02233"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=5e02233"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=5e02233"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=5e02233" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=d73f611"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=d73f611"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=d73f611"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=d73f611" />
     </head>
     <body>
     <h2>GOKZ Replay Viewer Demo</h2>
