Fixed a missing material

--- a/maps/kz_colors_v2/index.html
+++ b/maps/kz_colors_v2/index.html
@@ -7,9 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=196e-10b7b"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=196e-10b7b"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/mapview-styles.css?v=196e-10b7b" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=196e-12e15"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=196e-12e15"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/mapview-styles.css?v=196e-12e15" />
     </head>
     <body>
     <h2>Source Map Viewer Demo - kz_colors_v2</h2>
@@ -18,7 +18,7 @@
             var viewer;
             window.onload = function() {
                 viewer = new SourceUtils.MapViewer($("#map-view")[0]);
-                viewer.loadMap("/GOKZReplayViewer/maps/kz_colors_v2/index.json?v=196e-10b7b");
+                viewer.loadMap("/GOKZReplayViewer/maps/kz_colors_v2/index.json?v=196e-12e15");
                 viewer.animate();
             }
         </script>
