Added player name and run duration to title, fixed #7

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=13efd61"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=13efd61"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=13efd61"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=13efd61" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=38f0f1e"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=38f0f1e"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=38f0f1e"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=38f0f1e" />
     </head>
     <body>
-    <h2>GOKZ Replay Viewer Demo</h2>
+    <h2 id="title">GOKZ Replay Viewer Demo</h2>
     <div id="replay-list">
         <h3>Example replays:</h3>
         <ul>
