--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=4f4a135"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=4f4a135"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=4f4a135"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=4f4a135" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=e868918"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=e868918"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=e868918"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=e868918" />
     </head>
     <body>
     <h2 id="title">GOKZ Replay Viewer Demo</h2>
@@ -40,7 +40,6 @@
             window.onload = function() {
                 var searchParams = new URLSearchParams(window.location.search);
                 var replayUrl = searchParams.get("replay");
-                var tick = searchParams.get("tick");
 
                 if (replayUrl == null) {
                     $("#map-view").hide();
@@ -53,17 +52,12 @@
                     viewer = new ReplayViewer($("#map-view")[0]);
                     viewer.setMapBaseUrl("/GOKZReplayViewer/maps");
                     viewer.loadReplay(decodeURIComponent(replayUrl));
-
-                    if (tick != null) {
-                        viewer.gotoTick(parseInt(tick));
-                        viewer.pause();
-                    }
-
                     viewer.animate();
                 }
             }
         </script>
         <div id="control-panel" class="side-panel">
+            <span class="label">Playback tick:</span>&nbsp;<span id="control-currenttick">0</span> / <span id="control-totalticks">0</span><br/>
             <span class="label">Playback rate:</span>&nbsp;<span id="control-playbackrate">1.0</span>x<br/>
             <input id="playback-speed" class="slider" type="range" min="-2.0" max="2.0" value="1.0" step="0.1" />
         </div>
