Can now pause / resume by clicking, fixed #8

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=e868918"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=e868918"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=e868918"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=e868918" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=45d8558"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=45d8558"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=45d8558"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles.css?v=45d8558" />
     </head>
     <body>
     <h2 id="title">GOKZ Replay Viewer Demo</h2>
@@ -74,6 +74,8 @@
                 <span class="label">Materials loaded:</span>&nbsp;<span id="debug-materialsloaded"></span>%<br />
             </div>
         </div>
+        <div id="pause"></div>
+        <div id="play"></div>
     </div>
     </body>
 </html>
