New example page generator

--- a/index.template.html
+++ b/index.template.html
@@ -19,10 +19,26 @@
             #map-view {
                 position: absolute;
                 top: 72px;
-                left: 32px;
-                right: 32px;
-                bottom: 32px;
+                left: 16px;
+                right: 25%;
+                bottom: 16px;
                 background-color: black;
+            }
+
+            #replay-list {
+                position: absolute;
+                left: 75%;
+                right: 16px;
+                top: 72px;
+                bottom: 16px;
+                background-color: #111;
+                color: rgb(225, 220, 202);
+                padding-left: 32px;
+            }
+
+            #replay-list a {
+                color: #bcf;
+                text-decoration: none;
             }
         </style>
     </head>
@@ -46,6 +62,24 @@
                 }
             }
         </script>
+    </div>
+    <div id="replay-list">
+        <h2>Example Replays</h2>
+        <h3>kz_exps_cursedjourney</h2>
+        <ul>
+            <li><a href="?replay=replays/kz_exps_cursedjourney/0_KZT_NRM_NUB.replay">0_KZT_NRM_NUB.replay</a></li>
+            <li><a href="?replay=replays/kz_exps_cursedjourney/0_KZT_NRM_NUB.replay">0_KZT_NRM_NUB.replay</a></li>
+        </ul>
+        <h3>kz_colors_v2</h2>
+        <ul>
+            <li><a href="?replay=replays/kz_colors_v2/0_SKZ_NRM_PRO.replay">0_SKZ_NRM_PRO.replay</a></li>
+        </ul>
+        <h3>kz_reach_v2</h2>
+        <ul>
+            <li><a href="?replay=replays/kz_reach_v2/0_KZT_NRM_PRO.replay">0_KZT_NRM_PRO.replay</a></li>
+            <li><a href="?replay=replays/kz_reach_v2/0_SKZ_NRM_NUB.replay">0_SKZ_NRM_NUB.replay</a></li>
+            <li><a href="?replay=replays/kz_reach_v2/0_SKZ_NRM_PRO.replay">0_SKZ_NRM_PRO.replay</a></li>
+        </ul>
     </div>
     </body>
 </html>
