--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=2ac695e-106ad"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=2ac695e-106ad"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=2ac695e-106ad"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=2ac695e-106ad" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=2ac695e-106ad" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=b7cc0d2-10771"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=b7cc0d2-10771"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=b7cc0d2-10771"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=b7cc0d2-10771" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=b7cc0d2-10771" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -49,6 +49,7 @@
             var viewer;
             window.onload = function() {
                 viewer = new ReplayViewer(document.getElementById("map-view"));
+                viewer.showDebugPanel = true;
                 viewer.setMapBaseUrl("/GOKZReplayViewer/resources/maps");
 
                 var searchParams = new URLSearchParams(window.location.search);
