--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=b7cc0d2-10b7e"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=b7cc0d2-10b7e"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=b7cc0d2-10b7e"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=b7cc0d2-10b7e" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=b7cc0d2-10b7e" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=e7d03b8-10bc2"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=e7d03b8-10bc2"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=e7d03b8-10bc2"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=e7d03b8-10bc2" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=e7d03b8-10bc2" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -78,7 +78,7 @@
         </ul>
         <h3>kz_colors_v2</h2>
         <ul>
-            <li><a href="?replay=replays/kz_colors_v2/0_SKZ_NRM_PRO.replay">burhÃ¡c - 53:16.031</a></li>
+            <li><a href="?replay=replays/kz_colors_v2/0_SKZ_NRM_PRO.replay">burhác - 53:16.031</a></li>
         </ul>
         <h3>kz_reach_v2</h2>
         <ul>
