--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=fdd5e3b-11f45"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=fdd5e3b-11f45"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=fdd5e3b-11f45"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=fdd5e3b-11f45" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=fdd5e3b-11f45" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=2df2436-125a6"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=2df2436-125a6"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=2df2436-125a6"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=2df2436-125a6" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=2df2436-125a6" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
