--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=523ef1a-12766"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=523ef1a-12766"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=523ef1a-12766"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=523ef1a-12766" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=523ef1a-12766" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=1fe4552-128ae"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=1fe4552-128ae"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=1fe4552-128ae"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=1fe4552-128ae" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=1fe4552-128ae" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -62,6 +62,7 @@
 
                 if (replayUrl != null) {
                     viewer.loadReplay(decodeURIComponent(replayUrl));
+                    viewer.resume();
                     viewer.animate();
                 } else {
                     viewer.showMessage("No replay URL provided");
