--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=d955c97-e960"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=d955c97-e960"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=d955c97-e960"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=d955c97-e960" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=d955c97-e960" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=7936b43-1432c"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=7936b43-1432c"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=7936b43-1432c"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=7936b43-1432c" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=7936b43-1432c" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -53,9 +53,24 @@
         <script>
             var viewer;
             window.onload = function() {
-                viewer = new ReplayViewer(document.getElementById("map-view"));
+                viewer = new Gokz.ReplayViewer(document.getElementById("map-view"));
                 viewer.showDebugPanel = true;
                 viewer.setMapBaseUrl("/GOKZReplayViewer/resources/maps");
+
+                viewer.onreplayloaded = function(replay) {
+                    var mins = Math.floor(replay.time / 60);
+                    var secs = replay.time - (mins * 60);
+                    var secsString = secs.toFixed(3);
+
+                    var title = replay.playerName
+                        + " - " + replay.mapName
+                        + " - " + mins + ":" + (secsString.indexOf(".") === 1 ? "0" : "") + secsString
+                        + " - " + Gokz.GlobalMode[replay.mode]
+                        + " - " + (replay.teleportsUsed === 0 ? "Pro" : "Nub");
+
+                    document.getElementById("title").innerText = title;
+                    document.title = title;
+                };
 
                 var searchParams = new URLSearchParams(window.location.search);
                 var replayUrl = searchParams.get("replay");
