--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=7936b43-1432c"></script>
-        <script src="/GOKZReplayViewer/js/sourceutils.js?v=7936b43-1432c"></script>
-        <script src="/GOKZReplayViewer/js/replayviewer.js?v=7936b43-1432c"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=7936b43-1432c" />
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=7936b43-1432c" />
+        <script src="/GOKZReplayViewer/js/facepunch.webgame.js?v=7af08b2-1442e"></script>
+        <script src="/GOKZReplayViewer/js/sourceutils.js?v=7af08b2-1442e"></script>
+        <script src="/GOKZReplayViewer/js/replayviewer.js?v=7af08b2-1442e"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/mapviewer.css?v=7af08b2-1442e" />
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/styles/replayviewer.css?v=7af08b2-1442e" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -65,8 +65,8 @@
                     var title = replay.playerName
                         + " - " + replay.mapName
                         + " - " + mins + ":" + (secsString.indexOf(".") === 1 ? "0" : "") + secsString
-                        + " - " + Gokz.GlobalMode[replay.mode]
-                        + " - " + (replay.teleportsUsed === 0 ? "Pro" : "Nub");
+                        + " [" + Gokz.GlobalMode[replay.mode].toUpperCase() + "]"
+                        + " [" + (replay.teleportsUsed === 0 ? "PRO" : "NUB") + "]";
 
                     document.getElementById("title").innerText = title;
                     document.title = title;
