--- a/resources/maps/kz_exps_cursedjourney/index.html
+++ b/resources/maps/kz_exps_cursedjourney/index.html
@@ -6,9 +6,9 @@
         <title>Map Viewer - kz_exps_cursedjourney</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/GOKZReplayViewer/resources/js/facepunch.webgame.js?v=1973-128f3"></script>
-        <script src="/GOKZReplayViewer/resources/js/sourceutils.js?v=1973-128f3"></script>
-        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/resources/styles/mapviewer.css?v=1973-128f3" />
+        <script src="/GOKZReplayViewer/resources/js/facepunch.webgame.js?v=1973-1469c"></script>
+        <script src="/GOKZReplayViewer/resources/js/sourceutils.js?v=1973-1469c"></script>
+        <link type="text/css" rel="stylesheet" href="/GOKZReplayViewer/resources/styles/mapviewer.css?v=1973-1469c" />
         <style>
             #map-view {
                 position: absolute;
@@ -30,7 +30,7 @@
                 viewer.cameraMode = SourceUtils.CameraMode.FreeCam;
                 viewer.showDebugPanel = true;
                 viewer.saveCameraPosInHash = true;
-                viewer.loadMap("/GOKZReplayViewer/resources/maps/kz_exps_cursedjourney/index.json?v=1973-128f3");
+                viewer.loadMap("/GOKZReplayViewer/resources/maps/kz_exps_cursedjourney/index.json?v=1973-1469c");
                 viewer.animate();
             }
         </script>
