Fixed absolute image paths in stylesheet

--- a/index.template.html
+++ b/index.template.html
@@ -6,11 +6,11 @@
         <title>GOKZ Replay Viewer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="${BASEURL}/js/facepunch.webgame.js?v=${VERSION}"></script>
-        <script src="${BASEURL}/js/sourceutils.js?v=${VERSION}"></script>
-        <script src="${BASEURL}/js/replayviewer.js?v=${VERSION}"></script>
-        <link type="text/css" rel="stylesheet" href="${BASEURL}/styles/mapviewer.css?v=${VERSION}" />
-        <link type="text/css" rel="stylesheet" href="${BASEURL}/styles/replayviewer.css?v=${VERSION}" />
+        <script src="${BASEURL}/${RESOURCEDIR}/js/facepunch.webgame.js?v=${VERSION}"></script>
+        <script src="${BASEURL}/${RESOURCEDIR}/js/sourceutils.js?v=${VERSION}"></script>
+        <script src="${BASEURL}/${RESOURCEDIR}/js/replayviewer.js?v=${VERSION}"></script>
+        <link type="text/css" rel="stylesheet" href="${BASEURL}/${RESOURCEDIR}/styles/mapviewer.css?v=${VERSION}" />
+        <link type="text/css" rel="stylesheet" href="${BASEURL}/${RESOURCEDIR}/styles/replayviewer.css?v=${VERSION}" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
